# vidyaNav-ai-backend

./: .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
docs/: google-cloud-setup.md
instantknowledge_service/: agent.py  local_rag.py  schema.py
scripts/: test_auth.py  test_worksheetGen.py
upload_service/: main.py  storage.py
utils/: upload.py
visualaid_service/: agent.py  schema.py
worksheet_service/: agents.py  schemas.py
